change items order (twitter at top right)

--- a/public/views/header.view.html
+++ b/public/views/header.view.html
@@ -1,12 +1,12 @@
 <nav id="istex__web-header">
   <a class="logoistex" href="http://www.istex.fr/">
-      <img src="logo-istex-anr.png" title="Financement : ANR-10-IDEX-0004-02" alt="Istex" class="logoistexanr">
-      <img src="logo-istex.png" title="Financement : ANR-10-IDEX-0004-02" alt="Istex" class="logoistexonly">
-    </a>
+    <img src="logo-istex-anr.png" title="Financement : ANR-10-IDEX-0004-02" alt="Istex" class="logoistexanr">
+    <img src="logo-istex.png" title="Financement : ANR-10-IDEX-0004-02" alt="Istex" class="logoistexonly">
+  </a>
   <ul class="istex__navbar">
     <li class="istex__dropdown">
       <a href="https://doc.istex.fr/">
-          <i class='fa fa-book fa-fw fa-lg'></i><span class="text__dropdown">Documentation</span>
+        <i class='fa fa-book fa-fw fa-lg'></i><span class="text__dropdown">Documentation</span>
       </a>
       <ul class="istex__dropdown-menu">
         <li class="sub_menu">
@@ -28,16 +28,17 @@
     </li>
     <li>
       <a href="http://demo.istex.fr/" title="Démonstrateur à vocation pédagogique">
-          <i class='fa fa-film fa-fw fa-lg'></i><span class="text__dropdown">Démo</span>
+        <i class='fa fa-film fa-fw fa-lg'></i><span class="text__dropdown">Démo</span>
       </a>
     </li>
     <li class="istex__dropdown">
       <a href="#">
-          <i class='fa fa-wrench fa-fw fa-lg'></i><span class="text__dropdown">Outils</span>
+        <i class='fa fa-wrench fa-fw fa-lg'></i><span class="text__dropdown">Outils</span>
       </a>
       <ul class="istex__dropdown-menu">
         <li>
-          <a href="https://addons.istex.fr/" title="Accédez directement au plein-texte grâce à l'extension pour navigateur">
+          <a href="https://addons.istex.fr/"
+             title="Accédez directement au plein-texte grâce à l'extension pour navigateur">
             <i class='fa fa-puzzle-piece fa-fw fa-lg'></i>Extension
           </a>
         </li>
@@ -50,17 +51,29 @@
     </li>
     <li>
       <a href="http://blog.istex.fr/" title="Blog technique">
-          <i class='fa fa-comment fa-fw fa-lg'></i><span class="text__dropdown">Blog</span>
+        <i class='fa fa-comment fa-fw fa-lg'></i><span class="text__dropdown">Blog</span>
+      </a>
+    </li>
+    <li>
+      <a href="https://status.istex.fr/" title="État de santé de la plateforme ISTEX">
+        <i class='fa fa-heartbeat fa-fw fa-lg'></i><span class="text__dropdown">Status</span>
+      </a>
+    </li>
+    <li>
+      <a href="https://listes.istex.fr/sympa/lists/" title="Service de listes de L'ISTEX">
+        <i class='fa fa-envelope fa-fw fa-lg'></i><span class="text__dropdown">Listes</span>
       </a>
     </li>
     <li class="istex__dropdown">
       <a href="#"><i class='fa fa-lock fa-fw fa-lg'></i></a>
       <ul class="istex__dropdown-menu">
         <li>
-          <a href="http://wiki.istex.fr/" title="Wiki technique réservé aux équipes de développement"><img src="logo-wiki.png">Wiki</a>
+          <a href="http://wiki.istex.fr/" title="Wiki technique réservé aux équipes de développement"><img
+                  src="logo-wiki.png">Wiki</a>
         </li>
         <li>
-          <a href="http://kanban.istex.fr/" title="Tableau de suivi des corpus, accès contrôlé"><img src="logo-kanban.png">Kanban</a>
+          <a href="http://kanban.istex.fr/" title="Tableau de suivi des corpus, accès contrôlé"><img
+                  src="logo-kanban.png">Kanban</a>
         </li>
       </ul>
     </li>
@@ -68,26 +81,16 @@
       <a href="#"><i class='fa fa-twitter fa-fw fa-lg'></i></a>
       <ul class="istex__dropdown-menu">
         <li>
-            <a href="https://twitter.com/Projet_ISTEX/" title="Compte Twitter institutionnel">
-                <i class='fa fa-twitter fa-fw fa-lg'></i>Projet
-            </a>
+          <a href="https://twitter.com/Projet_ISTEX/" title="Compte Twitter institutionnel">
+            <i class='fa fa-twitter fa-fw fa-lg'></i>Projet
+          </a>
         </li>
         <li>
-            <a href="https://twitter.com/istexdev/" title="Compte Twitter de la plateforme">
-                <i class='fa fa-twitter fa-fw fa-lg'></i>Développement
-            </a>
+          <a href="https://twitter.com/istexdev/" title="Compte Twitter de la plateforme">
+            <i class='fa fa-twitter fa-fw fa-lg'></i>Développement
+          </a>
         </li>
       </ul>
-    </li>
-    <li>
-      <a href="https://listes.istex.fr/sympa/lists/" title="Service de listes de L'ISTEX">
-          <i class='fa fa-envelope fa-fw fa-lg'></i><span class="text__dropdown">Listes</span>
-      </a>
-    </li>
-    <li>
-      <a href="https://status.istex.fr/" title="État de santé de la plateforme ISTEX">
-          <i class='fa fa-heartbeat fa-fw fa-lg'></i><span class="text__dropdown">Status</span>
-      </a>
     </li>
   </ul>
 </nav>
