--- a/less/header.less
+++ b/less/header.less
@@ -1,43 +1,45 @@
 #istex__web-header {
-    position: relative;
-    width: 100%;
-    height: 40px;
-    z-index: 1000;
-    border-bottom: 1px solid @navbar-border-color;
-    background-color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 0 75px 0 3%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  position: relative;
+  width: 100%;
+  height: 40px;
+  z-index: 1000;
+  border-bottom: 1px solid @navbar-border-color;
+  background-color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0 75px 0 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 img {
-    vertical-align: middle;
+  vertical-align: middle;
 }
-.clear { clear: both }
+.clear {
+  clear: both;
+}
 
 .logoistex {
-    align-self: center;
+  align-self: center;
 }
 .logoistexonly {
-    display: none;
+  display: none;
 }
 
 nav {
   & > .istex__navbar {
-    margin:          9px 0 0 0;
-    font-size:       .8em;
+    margin: 9px 0 0 0;
+    font-size: 0.8em;
     list-style-type: none;
 
     a {
-      display:         block;
-      color:           #000;
+      display: block;
+      color: #000;
       text-decoration: none;
 
       &.disabled {
-        color:           #777;
+        color: #777;
         text-decoration: none;
-        cursor:          not-allowed;
+        cursor: not-allowed;
       }
 
       &:hover,
@@ -46,43 +48,45 @@ nav {
       }
       & > img,
       & > .fa {
-        margin-right: .33em;
+        margin-right: 0.33em;
       }
       & > .fa {
-        color:           #458ca6;
+        color: #458ca6;
         text-decoration: none;
       }
     }
 
     li {
-      height:      30px;
+      height: 30px;
       line-height: 30px;
     }
 
     & > li {
-      float:        left;
-      position:     relative;
+      float: left;
+      position: relative;
       margin-right: 10px;
     }
 
     .istex__dropdown-menu {
-      position:         absolute;
-      display:          none;
-      margin-left:      -15px;
-      border:           1px solid @navbar-border-color;
-      width:            130px;
+      position: absolute;
+      display: none;
+      margin-left: -15px;
+      border: 1px solid @navbar-border-color;
+      width: 130px;
       background-color: #fff;
-      list-style-type:  none;
+      list-style-type: none;
       & > li {
-          padding: 0 5px;
-          width: 130px;
+        padding: 0 5px;
+        width: 130px;
       }
       & .sub_menu {
         padding: 0 5px;
         width: 200px;
         background-color: #fff;
       }
-      & > li + li { border-top: 1px solid @navbar-border-color; }
+      & > li + li {
+        border-top: 1px solid @navbar-border-color;
+      }
     }
     .istex__dropdown:hover > .istex__dropdown-menu {
       display: block;
@@ -90,25 +94,25 @@ nav {
   }
 }
 @media (max-width: 830px) {
-    #istex__web-header {
-        padding: 0 2px 0 2px;
-    }
+  #istex__web-header {
+    padding: 0 2px 0 2px;
+  }
 }
-@media (max-width: 745px){
-    .logoistexanr {
-        display: none;
-    }
-    .logoistexonly {
-        display: inline;
-    }
+@media (max-width: 745px) {
+  .logoistexanr {
+    display: none;
+  }
+  .logoistexonly {
+    display: inline;
+  }
 }
-@media (max-width: 695px){
-    .text__dropdown {
-        display: none;
-    }
+@media (max-width: 695px) {
+  .text__dropdown {
+    display: none;
+  }
 }
 @media (max-width: 444px) {
-    .logoistexonly {
-        display: none;
-    }
+  .logoistexonly {
+    display: none;
+  }
 }
