changement nom methode + remplassement iframe par une div

--- a/public/views/header.html
+++ b/public/views/header.html
@@ -14,5 +14,5 @@
 			</li>
 		</ul>
 	</nav>
-	<iframe src="https://www.istex.fr/" id="header_frame"></iframe>
+	<div id="header_frame"><p>test de la box des apps</p></div>
 </header>
