Netoyage + nanoAjax + rename des methode

--- a/views/header.html
+++ b/views/header.html
@@ -3,14 +3,14 @@
 		<ul>
 			<li id="header_logo">
 				<a href="https://www.istex.fr/">
-					<img src="public/img/istex-logo.svg">
+					<img src="img/istex-logo.svg">
 				</a>
 			</li>
 			<li id="header_notif">
-				<img src="public/img/ic_notifications.svg">
+				<img src="img/ic_notifications.svg">
 			</li>
 			<li id="header_app">
-				<img src="public/img/ic_services.svg">
+				<img src="img/ic_services.svg">
 			</li>
 		</ul>
 	</nav>
