Recuperation des applications + affichage

--- a/views/header.html
+++ b/views/header.html
@@ -14,5 +14,8 @@
 			</li>
 		</ul>
 	</nav>
-	<div id="header_frame"><p>test de la box des apps</p></div>
+	<div id="header_block_app">
+		<div id="frame_app"></div>
+		<span id="fleche_app"></span>
+	</div>
 </header>
