--- a/css/main.css
+++ b/css/main.css
@@ -20,21 +20,21 @@ header{
 }
 
 nav,nav ul {
-    display: inherit;
+	display: inherit;
 }
 
 nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 
 #header_logo{
 	margin-top:17px;
 	height: 15px;
 	position: absolute;
-  	left: 50%;
- 	margin-left: -32px;
+	left: 50%;
+	margin-left: -32px;
 }
 
 #header_app,#header_notif{
@@ -50,12 +50,69 @@ nav img{
 	height: 100%;
 }
 
+#header_block_app{
+	display: none;
+}
 
+#fleche_app{
+	position: absolute;
+	right: 3%;
+	margin-right: 2.5px;
+	top:50px;
+  	border-left: 10px solid transparent;
+  	border-right: 10px solid transparent;
+  	border-bottom: 10px solid #FFFFFF;
+}
 
-#header_frame{
+#frame_app{
 	position: absolute;
 	right: 2%;
 	top:60px;
-	display: none;
+	width: 360px;
 	border: solid 1px #FFFFFF;
+	background-color: #242B32;
+	color:#FFFFFF;
+	font-family: Monserrat;
 }
+
+#frame_app ul{
+	width: 100%;
+	height: 100%;
+
+	padding: 0;
+	margin: 0;
+}
+
+#frame_app li{
+	list-style: none;
+	display: inline-block;
+	vertical-align: top;
+	text-align: center;
+	
+}
+
+#frame_app div{
+	width: 100px;
+	height: 150px;
+	
+	padding: 5px;
+	margin:5px;
+}
+
+#frame_app div:hover{
+	padding: 4px;
+	border: solid 1px #FFFFFF;
+	border-radius: 10px;
+}
+
+#frame_app a{
+	text-decoration: none;
+	color: #FFFFFF;
+	
+}
+
+#frame_app img{
+	width: 64px;
+	height: 64px;
+}
+
