--- a/views/header.html
+++ b/views/header.html
@@ -7,15 +7,17 @@
 				</a>
 			</li>
 			<li id="header_notif">
-				<img src="img/ic_notifications.svg">
+				<a href="https://twitter.com/projet_istex?lang=fr">
+					<img src="img/ic_notifications.svg">
+				</a>
 			</li>
-			<li id="header_app">
+			<li id="header_services">
 				<img src="img/ic_services.svg">
 			</li>
 		</ul>
 	</nav>
-	<div id="header_block_app">
-		<div id="frame_app"></div>
-		<span id="fleche_app"></span>
+	<div id="header_block_services">
+		<div id="frame_services"></div>
+		<span id="fleche_services"></span>
 	</div>
 </header>
