Rename frame=popin + gestion erreur
-Ne fais plus de alert mais est directement envoyer la ou il faut

--- a/views/header.html
+++ b/views/header.html
@@ -17,7 +17,7 @@
 		</ul>
 	</nav>
 	<div id="header_block_services">
-		<div id="frame_services"></div>
+		<div id="popin_services"></div>
 		<span id="fleche_services"></span>
 	</div>
 </header>
