--- a/css/main.css
+++ b/css/main.css
@@ -66,16 +66,17 @@ nav img{
 	border-bottom: 10px solid #FFFFFF;
 }
 
-#frame_services{
+#popin_services{
 	position: absolute;
 	right: 2%;
 	top:60px;
 	width: 360px;
 	border: solid 1px #FFFFFF;
 	background-color: #242B32;
+	color: #FFFFFF;
 }
 
-#frame_services ul{
+#popin_services ul{
 	width: 100%;
 	height: 100%;
 
@@ -83,14 +84,14 @@ nav img{
 	margin: 0;
 }
 
-#frame_services li{
+#popin_services li{
 	list-style: none;
 	display: inline-block;
 	vertical-align: top;
 	text-align: center;	
 }
 
-#frame_services div{
+#popin_services div{
 	width: 100px;
 	height: 150px;
 	
@@ -101,24 +102,24 @@ nav img{
 }
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
-#frame_services a{
+#popin_services a{
 	text-decoration: none;
 	color: #C4D733;
 	font-family: 'Montserrat', sans-serif;
 }
 
-#frame_services a:hover{
+#popin_services a:hover{
 	text-decoration: underline;
 	color: #FFFFFF;
 }
 
-#frame_services a:hover div{
+#popin_services a:hover div{
 	background-color: #458CA5;
 	border: solid 1px #FFFFFF;
 }
 
 
-#frame_services img{
+#popin_services img{
 	width: 64px;
 	height: 64px;
 }
