--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ nav img{
 	position: absolute;
 	right: 2%;
 	top:60px;
-	width: 360px;
+	width: 300px;
 	border: solid 1px #FFFFFF;
 	background-color: #242B32;
 	color: #FFFFFF;
@@ -79,48 +79,45 @@ nav img{
 #popin_services ul{
 	width: 100%;
 	height: 100%;
-
-	padding: 0;
+	padding: 5px;
 	margin: 0;
 }
 
 #popin_services li{
 	list-style: none;
 	display: inline-block;
-	vertical-align: top;
 	text-align: center;	
-}
-
-#popin_services div{
-	width: 100px;
-	height: 150px;
-	
-	padding: 4px;
-	margin:5px;
-	border: solid 1px #FFFFFF;
-	transition-duration: 0.5s;
 }
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 #popin_services a{
-	text-decoration: none;
-	color: #C4D733;
+	display: block;
+	width: 75px;
+	height: 75px;
+	padding: 5px;
+	margin:5px;
+	color: #FFFFFF;
 	font-family: 'Montserrat', sans-serif;
+	text-decoration: none;
+	font-size: 0.75em;
+}
+
+#popin_services a div{
+	margin-top: 50%; 
+  	transform: translateY(-50%); 
 }
 
 #popin_services a:hover{
 	text-decoration: underline;
-	color: #FFFFFF;
-}
-
-#popin_services a:hover div{
-	background-color: #458CA5;
+	text-decoration-color: #C4D733;
+	padding: 4px;
 	border: solid 1px #FFFFFF;
+	background-color: #458CA5;
+	border-radius: 2px; 
 }
-
 
 #popin_services img{
-	width: 64px;
-	height: 64px;
+	width: 32px;
+	height: 32px;
 }
 
