--- a/views/header.html
+++ b/views/header.html
@@ -16,7 +16,7 @@
 			</li>
 		</ul>
 	</nav>
-	<div id="header_block_services">
+	<div id="header_block_services" class="off">
 		<div id="popin_services"></div>
 		<span id="fleche_services"></span>
 	</div>
