Intregration sur un autre serveur
-Juste besoin de rajouter une relation dans l'index.html
-url changer pour celle du serveur qui contient le header
-Css du site inchanger
-CSS du header changer par le css du site de base

--- a/views/header.html
+++ b/views/header.html
@@ -1,6 +1,6 @@
-<header>
-	<nav id="istex__web-header">
-		<ul>
+<header id="istex_web_header">
+	<nav id="header_nav">
+		<ul id="header_ul">
 			<li id="header_logo">
 				<a href="https://www.istex.fr/">
 					<img src="img/istex-logo.svg">
@@ -16,7 +16,7 @@
 			</li>
 		</ul>
 	</nav>
-	<div id="header_block_services">
+	<div id="header_block_services" class="off">
 		<div id="popin_services"></div>
 		<span id="fleche_services"></span>
 	</div>
