--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-html,body,header,nav,nav ul{
+
+html,body,#istex_web_header,#header_nav,#header_ul{
 	width: 100%;
 }
 
@@ -6,22 +7,19 @@ html, body{
 	margin: 0;
 }
 
-body{
-	background-color:gray;
-}
 
-header{ 
+#istex_web_header{ 
 	background-color:#242B32;
 	height: 48px;
 	display: flex;
 	border-bottom: solid 2px #FFFFFF;
 }
 
-nav,nav ul {
+#header_nav,#header_ul {
 	display: inherit;
 }
 
-nav ul {
+#header_ul {
 	list-style-type: none;
 	margin: 0;
 }
@@ -48,12 +46,25 @@ nav ul {
 	margin-left: auto;
 }
 
-nav img{
+#header_nav img{
 	height: 100%;
 }
 
-#header_block_services{
-	display: none;
+#header_block_services>div, #header_block_services>span{
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  z-index: 99999;
+}
+
+#header_block_services.on>div,#header_block_services.on>span{
+	opacity: 1;
+}
+
+#header_block_services.off>div,#header_block_services.off>span{
+  opacity: 0;
 }
 
 #fleche_services{
@@ -70,57 +81,55 @@ nav img{
 	position: absolute;
 	right: 2%;
 	top:60px;
-	width: 360px;
+	width: 300px;
 	border: solid 1px #FFFFFF;
 	background-color: #242B32;
 	color: #FFFFFF;
 }
 
-#popin_services ul{
+#popin_services_ul{
 	width: 100%;
 	height: 100%;
-
-	padding: 0;
+	padding: 5px;
 	margin: 0;
 }
 
-#popin_services li{
+.services{
 	list-style: none;
 	display: inline-block;
-	vertical-align: top;
 	text-align: center;	
 }
 
-#popin_services div{
-	width: 100px;
-	height: 150px;
-	
-	padding: 4px;
-	margin:5px;
-	border: solid 1px #FFFFFF;
-	transition-duration: 0.5s;
-}
-
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
-#popin_services a{
-	text-decoration: none;
-	color: #C4D733;
-	font-family: 'Montserrat', sans-serif;
-}
-
-#popin_services a:hover{
-	text-decoration: underline;
+.services_lien{
+	display: block;
+	width: 75px;
+	height: 75px;
+	padding: 5px;
+	margin:5px;
 	color: #FFFFFF;
+	font-family: 'Montserrat', sans-serif;
+	text-decoration: none;
+	font-size: 0.75em;
 }
 
-#popin_services a:hover div{
-	background-color: #458CA5;
+.services_lien div{
+	margin-top: 50%; 
+  	transform: translateY(-50%); 
+}
+
+.services_lien:hover{
+	text-decoration: underline;
+	text-decoration-color: #C4D733;
+	padding: 4px;
+	color: #FFFFFF;
 	border: solid 1px #FFFFFF;
+	background-color: #458CA5;
+	border-radius: 2px; 
 }
-
 
 #popin_services img{
-	width: 64px;
-	height: 64px;
+	width: 32px;
+	height: 32px;
 }
 
