--- a/views/header.html
+++ b/views/header.html
@@ -1,23 +1,23 @@
 <header id="istex_web_header">
-	<nav id="header_nav">
-		<ul id="header_ul">
-			<li id="header_logo">
+	<nav id="iwh_header_nav">
+		<ul id="iwh_header_ul">
+			<li id="iwh_header_logo">
 				<a href="https://www.istex.fr/">
 					<img src="img/istex-logo.svg">
 				</a>
 			</li>
-			<li id="header_notif">
+			<li id="iwh_header_notif">
 				<a href="https://twitter.com/projet_istex?lang=fr">
 					<img src="img/ic_notifications.svg">
 				</a>
 			</li>
-			<li id="header_services">
+			<li id="iwh_header_services">
 				<img src="img/ic_services.svg">
 			</li>
 		</ul>
 	</nav>
-	<div id="header_block_services" class="off">
-		<div id="popin_services"></div>
-		<span id="fleche_services"></span>
+	<div id="iwh_header_block_services" class="off">
+		<div id="iwh_popin_services"></div>
+		<span id="iwh_fleche_services"></span>
 	</div>
 </header>
