--- a/css/main.css
+++ b/css/main.css
@@ -16,31 +16,30 @@
 	border-bottom: solid 2px #FFFFFF;
 }
 
+#istex_web_header *::after,#istex_web_header *::before{
+	content: none;
+}
+
 #iwh_header_nav,#iwh_header_ul {
 	display: inherit;
 	height: 100%;
 }
 
-#iwh_header_nav a{
-	display: inline;
-	padding: 0
-}
-
-#iwh_header_nav a::after{
-	content: none;
-	display: inline-block;
-}
-
 #iwh_header_ul {
 	list-style-type: none;
 	margin: 0;
+	padding: 0;
 	font-size: 1rem;
 	line-height: 1;
 }
 
-#iwh_header_ul::after {
-	content: none;
-	display: inline-block;
+#iwh_header_ul a{
+	display: inline;
+	padding: 0;
+}
+
+#iwh_header_ul a:hover {
+	opacity:1;
 }
 
 #iwh_header_logo{
