--- a/public/views/header.html
+++ b/public/views/header.html
@@ -17,7 +17,7 @@
     </ul>
   </nav>
   <div id="iwh_header_block_services" class="off">
-    <div id="iwh_popin_services" />
-    <span id="iwh_fleche_services" />
+    <span id="iwh_fleche_services" ></span>
+    <div id="iwh_popin_services" ></div>
   </div>
 </header>
