--- a/public/css/main.css
+++ b/public/css/main.css
@@ -241,6 +241,26 @@
   }
 
   .iwh_popin_services {
+    width: calc(100% / 6 - 10px);
+    padding-top: calc(100% / 6 - 10px);
+  }
+}
+
+@media all and (max-device-width: 800px) and (max-device-height: 512px) {
+  #iwh_popin_services {
+    right: 0;
+    width: 100%;
+  }
+  #iwh_header_services,
+  #iwh_header_notif {
+    margin-right: 5%;
+  }
+
+  #iwh_fleche_services {
+    right: 5%;
+  }
+
+  .iwh_popin_services {
     width: calc(100% / 5 - 10px);
     padding-top: calc(100% / 5 - 10px);
   }
