Drop old twitter account

--- a/public/views/header.view.html
+++ b/public/views/header.view.html
@@ -126,28 +126,11 @@
         </li>
       </ul>
     </li>
-    <li class="istex__dropdown">
-      <a href="#">
+    <li>
+      <a href="https://twitter.com/ISTEX_Platform/" title="Compte Twitter">
         <i class="fa fa-twitter fa-fw fa-lg" />
+        <span class="text__dropdown">Twitter</span>
       </a>
-      <ul class="istex__dropdown-menu">
-        <li>
-          <a
-            href="https://twitter.com/Projet_ISTEX/"
-            title="Compte Twitter institutionnel"
-          >
-            <i class="fa fa-twitter fa-fw fa-lg" />Projet
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://twitter.com/istexdev/"
-            title="Compte Twitter de la plateforme"
-          >
-            <i class="fa fa-twitter fa-fw fa-lg" />Développement
-          </a>
-        </li>
-      </ul>
     </li>
   </ul>
 </nav>;
