Remplacement 'title' par 'data-filename'

--- a/src/views/header.html
+++ b/src/views/header.html
@@ -3,16 +3,16 @@
     <ul id="iwh_header_ul">
       <li id="iwh_header_logo">
         <a href="https://www.istex.fr/">
-          <img src="" title="istex-logo" />
+          <img src="" data-filename="istex-logo" />
         </a>
       </li>
       <li id="iwh_header_notif">
         <a href="https://twitter.com/projet_istex?lang=fr">
-          <img src="" title="ic_notifications" />
+          <img src="" data-filename="ic_notifications" />
         </a>
       </li>
       <li id="iwh_header_services">
-        <img src="" title="ic_services" />
+        <img src="" data-filename="ic_services" />
       </li>
     </ul>
   </nav>
