--- a/src/header.css
+++ b/src/header.css
@@ -94,14 +94,26 @@
   visibility: hidden;
 }
 
-#iwh_fleche_services {
+#iwh_fleche_services,
+#iwh_fleche_services_border {
   position: absolute;
   right: 3%;
+  border-style: solid;
+  border-top: none;
+}
+
+#iwh_fleche_services {
+  top: 51px;
   margin-right: 2.5px;
+  border-color: transparent transparent #242b32 transparent;
+  border-width: 10px;
+}
+
+#iwh_fleche_services_border {
   top: 50px;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid #ffffff;
+  margin-right: 1.5px;
+  border-color: transparent transparent #ffffff transparent;
+  border-width: 11px;
 }
 
 #iwh_popin_services {
@@ -193,7 +205,8 @@
     margin-right: 5%;
   }
 
-  #iwh_fleche_services {
+  #iwh_fleche_services,
+  #iwh_fleche_services_border {
     right: 5%;
   }
 }
@@ -208,7 +221,8 @@
     margin-right: 5%;
   }
 
-  #iwh_fleche_services {
+  #iwh_fleche_services,
+  #iwh_fleche_services_border {
     right: 5%;
   }
 
@@ -228,7 +242,8 @@
     margin-right: 5%;
   }
 
-  #iwh_fleche_services {
+  #iwh_fleche_services,
+  #iwh_fleche_services_border {
     right: 5%;
   }
 
@@ -249,7 +264,8 @@
     margin-right: 7%;
   }
 
-  #iwh_fleche_services {
+  #iwh_fleche_services,
+  #iwh_fleche_services_border {
     right: 7%;
   }
   .iwh_popin_services {
